--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,14 @@
   "content_scripts": [{
     "matches": ["*://*/*"],
     "js": ["contentScript.js"]
-  }]
+  }],
+  "commands": {
+    "Multi-clipboard": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+V",
+        "mac": "Command+Shift+V"
+      },
+      "description": "use Multi-clipboard"
+    }
+  }
 }
